# dryad

./: .travis.yml  Cargo.toml  Makefile  README.md  build.rs  gen_tests.sh  setup.sh
asm/: Cargo.toml
asm/src/: lib.rs
etc/: dynamic-list.txt
src/: auxv.rs  gdb.rs  image.rs  kernel_block.rs  lib.rs  linker.rs  loader.rs  relocation.rs  runtime.rs  tls.rs  utils.rs
src/arch/arm/: asm.s
src/arch/x86/: asm.s
src/arch/x86_64/: asm.s
src/binary/elf/: dyn.rs  image.rs  loader.rs
test/: getaux.c
