[package]
name = "dryad"
version = "0.1.2"
authors = ["m4b <m4b.github.io@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
gcc = "0.3"

[dependencies]
crossbeam = "0.2.9"
syscall = "0.2.1"
colorify = { version = "0.2.2", optional = true }

[features]
default = ["color"]
color = ["colorify"]

[dependencies.goblin]
version = "0.0.5"
default-features = false
features = ["std", "elf64", "elf32"]
